------------------- Upcoming version 8.2 -----------------------------

Bugfixes:

- The OpenMP detection now additionally checks for the `-fiopenmp` flag
  used by Intel oneAPI.
- The OMPT adapter now aborts when it detects non-conforming OpenMP
  behavior observed with runtimes that don't support OMPT target
  callbacks (here, helper threads are created that lack thread-begin
  and implicit-task-begin but dispatch parallel-begin).
- Support for OpenMP's tool interface OMPT will be partially disabled
  if configure detects shortcomings of the OpenMP runtime that can be
  worked around by disabling parts of the interface. The reason will
  be reported in the configure summary as `OMPT remediable checks`,
  whereas shortcomings that can't be worked around are now reported as
  `OMPT critical checks`.
- Additional compiler-generated functions are excluded from automatic
  compiler instrumentation, as they are known to cause measurement
  failures. The names of these functions are unique and won't collide
  with user-code functions, with one exception, though.  Functions
  containing the substring `_tree_reduce_` are neglected when using
  Intel's oneAPI compilers. In this case, renaming the functions would
  prevent them from being ignored.
- Fix the errors in topology coordinate mapping, introduced by
  non-process location groups.
- Fix abort on nested synchronization regions in OpenMP programs
  when using the OMPT adapter.

------------------- Released version 8.1 -----------------------------

Bugfixes:

- Score-P now gracefully handles undefined behavior exploited by the
  application when using the Pthread API instead of aborting the
  application.
- Allow to build against LLVM's libunwind.
- Fix segmentation fault when trying to parse certain function names.
- Fix segmentation fault when executing OpenMP target regions on the
  host.
- Score-P records program arguments again. The feature was disabled due