@@ -31,12 +31,14 @@
 #include <SCOREP_Memory.h>
 #include <SCOREP_Paradigms.h>
 #include <SCOREP_Addr2line.h>
+#include <SCOREP_Definitions.h>
 
 
 /* *INDENT-OFF* */
 static int initialize_tool( ompt_function_lookup_t lookup, int initialDeviceNum, ompt_data_t *toolData );
 static void register_event_callbacks_host( ompt_set_callback_t setCallback );
 static void register_event_callbacks_device( ompt_set_callback_t setCallback );
+static void initialize_parameters( void );
 static void finalize_tool( ompt_data_t *toolData );
 static void cb_registration_status( char* name, ompt_set_result_t status );
 /* *INDENT-ON* */
@@ -50,6 +52,8 @@ static ompt_finalize_tool_t ompt_finalize_tool;
 static bool tool_initialized;
 bool        scorep_ompt_record_events   = false;
 bool        scorep_ompt_finalizing_tool = false;
+
+SCOREP_ParameterHandle scorep_ompt_parameter_loop_type = SCOREP_INVALID_PARAMETER;
 
 
 /* Called by the OpenMP runtime. Everything starts from here. */
@@ -104,6 +108,7 @@ initialize_tool( ompt_function_lookup_t lookup,
        TODO provide means to selectively register (groups of) callbacks? */
     register_event_callbacks_host( set_callback );
     register_event_callbacks_device( set_callback );
+    initialize_parameters();
 
     tool_initialized = true;
     return 1; /* non-zero indicates success */
@@ -199,6 +204,14 @@ static void
 register_event_callbacks_device( ompt_set_callback_t setCallback )
 {
     REGISTER_CALLBACK(, device_initialize );
+}
+
+static void
+initialize_parameters( void )
+{
+    #if !HAVE( SCOREP_OMPT_MISSING_WORK_LOOP_SCHEDULE )
+    scorep_ompt_parameter_loop_type = SCOREP_Definitions_NewParameter( "schedule", SCOREP_PARAMETER_STRING );
+    #endif /* !HAVE( SCOREP_OMPT_MISSING_WORK_LOOP_SCHEDULE ) */
 }
 
 
